--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,11 +5,13 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="8" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
-        <activity
+    
+       <activity
             android:name=".MobileBasedTestAndroid"
             android:label="@string/app_name" >
             <intent-filter>
@@ -19,5 +21,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
