--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,5 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MBTExam"
+            android:label="@string/app_name"></activity>
     </application>
 </manifest>
